I'm still struggling with Intent. How can I bring parsed data from NetworkActivity.kt to MainActivity.kt and set it up on UI? (Still Not Working!)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="updated">Just Updated!</string>
 
     <string name="parsed_data">Parsed Data</string>
+    <string name="this_is_parsed_xml">this is parsed xml</string>
 </resources>
