--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="parsed_data">Parsed Data</string>
     <string name="this_is_parsed_xml">this is parsed xml</string>
+    <string name="i_am_parsed_xml_data">I am parsed xml data</string>
 </resources>
