--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
 
     <string name="parsed_data">Parsed Data</string>
     <string name="this_is_parsed_xml">this is parsed xml</string>
-    <string name="i_am_parsed_xml_data">I am parsed xml data</string>
-    <string name="hello_this_is_edittext">hello this is editText</string>
     <string name="this_is_second_textview">this is second textview</string>
+    <string name="type_station_name">type station name</string>
+    <string name="station_button">Station Button</string>
+    <string name="station_name">station name</string>
 </resources>
