--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="enter_bus">enter busNm</string>
     <string name="enter_station">enter stationNm</string>
     <string name="apply">apply</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="google_map_practice_contentDescription">google map practice contentDescription</string>
 </resources>
