--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="pick_a_day">pick a day</string>
     <string name="pick_a_time">pick a time</string>
     <string name="name_of_this_notification">name of this notification</string>
+    <string name="next">NEXT</string>
 </resources>
