--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="page_title">Page Title</string>
     <string name="updated">Just Updated!</string>
 
+    <string name="notification_context_text">Context Text</string>
+    <string name="notification_context_title">Context Title</string>
+
     <string name="parsed_data">Parsed Data</string>
     <string name="this_is_parsed_xml">this is parsed xml</string>
     <string name="this_is_second_textview">this is second textview</string>
