CREATE AfterSetting.kt and activity_after_setting.xml
Because I finished building a main structure - user input of bus and station name,
show two marks using Google Maps so the user can choose one, and finally
setting an customized alarm - now it's time for adding further
functions. Also, I am praticing with git flow. (Just made some branches)
Anyway, I'm trying to add some user interfaces of RunRun, such as a
layout after setting a notification, or main page (before entering bus
and station name)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
+    <string name="congrats">Congratulations! \nWeekly Alarm is successfully set.</string>
+    <string name="returnTo">return to main</string>
 </resources>
