CREATE MainScreen.kt and its layout
connected screens with Intent. Also, renamed MainActivity to TwoInputs,
cause it'll be no longer be used as first screen.
p.s. still practicing git flow. Current branch is
feature/screen_afterSet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="sunday">Sunday</string>
     <string name="congrats">Congratulations! \nWeekly Alarm is successfully set.</string>
     <string name="returnTo">return to main</string>
+    <string name="mainDescription">welcome to main page</string>
 </resources>
