ListFragment에 recyclerView 이용해서 저장하는 기능

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="congrats">Congratulations! \nWeekly Alarm is successfully set.</string>
     <string name="returnTo">return to main</string>
     <string name="mainDescription">welcome to main page</string>
+    <string name="drawer_opened">드로어가 열림</string>
+    <string name="drawer_closed">드로어가 닫힘\n</string>
 </resources>
