--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,23 @@
     <string name="mainDescription">welcome to main page</string>
     <string name="drawer_opened">드로어가 열림</string>
     <string name="drawer_closed">드로어가 닫힘\n</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- 로그인 auth 구현 중 -->
+    <string name="default_client_id">85415682290-0r461j96mlvk7if9nfoumhq1no37hjt0.apps.googleusercontent.com</string>
+
+
 </resources>
